[package]
name = "rust-bitbar"
version = "0.3.4"
authors = ["Benjamin Coenen <benjamin.coenen@hotmail.com>"]
edition = "2018"
description = "Rust crate to build BitBar plugins"
repository = "https://github.com/bnjjj/rust-bitbar"
readme = "README.md"
keywords = ["bitbar", "bitbar-plugin", "macos", "plugin"]
license-file = "LICENSE"
categories = ["os", "parsing"]

[badges]
travis-ci = { repository = "bnjjj/rust-bitbar", branch = "master" }

[dependencies]
